--- a/Modelbouwer/Resources/Styles/DataGrid.xaml
+++ b/Modelbouwer/Resources/Styles/DataGrid.xaml
@@ -20,9 +20,17 @@
 	</Style>
 
 	<Style x:Key="EditableCellStyle" TargetType="syncfusion:GridCell">
-		<Setter Property="Background" Value="#3efefe" />
-		<Setter Property="BorderBrush" Value="Blue" />
-		<Setter Property="BorderThickness" Value="1" />
+		<Setter Property="BorderBrush" Value="LightGray" />
+		<Setter Property="BorderThickness" Value=".25" />
+		<Setter Property="FontStyle" Value="Normal" />
+		<Setter Property="FontWeight" Value="Medium" />
+	</Style>
+
+	<Style x:Key="NonEditableCellStyle" TargetType="syncfusion:GridCell">
+		<Setter Property="BorderBrush" Value="LightGray" />
+		<Setter Property="BorderThickness" Value=".25" />
+		<Setter Property="FontStyle" Value="Italic" />
+		<Setter Property="FontWeight" Value="Light" />
 	</Style>
 
 
