--- a/Modelbouwer/View/CategoryManagement.xaml
+++ b/Modelbouwer/View/CategoryManagement.xaml
@@ -2,19 +2,18 @@
 	x:Class="Modelbouwer.View.CategoryManagement"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:Engine="clr-namespace:Syncfusion.UI.Xaml.TreeView.Engine;assembly=Syncfusion.SfTreeView.WPF"
 	xmlns:converter="clr-namespace:Modelbouwer.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:Engine="clr-namespace:Syncfusion.UI.Xaml.TreeView.Engine;assembly=Syncfusion.SfTreeView.WPF"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
 	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
-	Title="CategoryManagement"
+	mc:Ignorable="d"
 	d:DataContext="{d:DesignInstance Type=viewmodels:CategoryViewModel}"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
-	mc:Ignorable="d"
-	>
+	Title="CategoryManagement">
 
 	<Page.DataContext>
 		<viewmodels:CategoryViewModel />
@@ -39,8 +38,7 @@
 		<StackPanel
 			Grid.Row="0"
 			Margin="10,0,10,0"
-			Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}"
-			>
+			Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
 			<TextBlock Style="{DynamicResource DefaultTitle}" Text="{StaticResource Edit.Category.Title}" />
 			<Canvas>
 				<Path Style="{DynamicResource DefaultTitleLine}" />
@@ -53,8 +51,7 @@
 			Grid.Row="1"
 			Margin="10,0,0,0"
 			HorizontalAlignment="Left"
-			VerticalAlignment="Center"
-			>
+			VerticalAlignment="Center">
 
 			<!--#region Colomn defenition-->
 			<Grid.ColumnDefinitions>
@@ -71,8 +68,7 @@
 				Grid.Column="1"
 				Width="450"
 				Style="{DynamicResource DefaultTextBox}"
-				Text="{Binding SelectedCategory.CategoryName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-				/>
+				Text="{Binding SelectedCategory.CategoryName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 			<!--#endregion-->
 		</Grid>
 		<!--#endregion-->
@@ -82,8 +78,7 @@
 		<StackPanel
 			Grid.Row="2"
 			Orientation="Horizontal"
-			Visibility="Collapsed"
-			>
+			Visibility="Collapsed">
 			<TextBox x:Name="inpCategoryId" Text="{Binding SelectedCategory.CategoryId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 			<TextBox x:Name="inpCategoryParentId" Text="{Binding SelectedCategory.CategoryParentId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 		</StackPanel>
@@ -92,8 +87,7 @@
 		<ToolBarTray
 			Grid.Row="3"
 			Margin="10,2,0,2"
-			Style="{DynamicResource DefaultToolBarTray}"
-			>
+			Style="{DynamicResource DefaultToolBarTray}">
 			<ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
 				<Button Click="ExpandAll" ToolTip="{StaticResource Edit.Category.Action.Tooltip.Expand}">
 					<Image Source="{DynamicResource expand}" />
@@ -106,33 +100,28 @@
 					<Image
 						Width="18"
 						Margin="5,0,0,0"
-						Source="{StaticResource addtask}"
-						/>
+						Source="{StaticResource addtask}" />
 				</Button>
 				<Button Click="ButtonNewSubCategory" ToolTip="{StaticResource Edit.Category.Action.Tooltip.AddSubTask}">
 					<Image
 						Width="18"
 						Margin="5,0,0,0"
-						Source="{StaticResource addsubtask}"
-						/>
+						Source="{StaticResource addsubtask}" />
 				</Button>
 				<Button Click="ButtonDelete" ToolTip="{StaticResource Edit.Category.Action.Tooltip.Delete}">
 					<Image
 						Width="18"
 						Margin="5,0,0,0"
-						Source="{StaticResource deletetask}"
-						/>
+						Source="{StaticResource deletetask}" />
 				</Button>
 				<Button
 					Click="ButtonSave"
 					ToolTip="{StaticResource Edit.Category.Action.Tooltip.Save}"
-					Visibility="{Binding Text, ElementName=inpCategoryName, Converter={StaticResource StringEmptyToVisibilityConverter}}"
-					>
+					Visibility="{Binding Text, ElementName=inpCategoryName, Converter={StaticResource StringEmptyToVisibilityConverter}}">
 					<Image
 						Width="18"
 						Margin="5,0,0,0"
-						Source="{StaticResource save}"
-						/>
+						Source="{StaticResource save}" />
 				</Button>
 			</ToolBar>
 		</ToolBarTray>
@@ -155,8 +144,7 @@
 			LineStrokeThickness=".75"
 			SelectedItem="{Binding SelectedCategory, Mode=TwoWay}"
 			ShowLines="True"
-			ShowRootLines="True"
-			>
+			ShowRootLines="True">
 
 			<!--#region Context menu-->
 			<syncfusion:SfTreeView.ItemContextMenu>
@@ -164,27 +152,23 @@
 					<MenuItem
 						Click="ExpandAll"
 						Header="{StaticResource Edit.Category.Action.ContextMenu.Label.Expand}"
-						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Expand}"
-						>
+						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Expand}">
 						<MenuItem.Icon>
 							<Image
 								Width="16"
 								Height="16"
-								Source="{StaticResource expand}"
-								/>
+								Source="{StaticResource expand}" />
 						</MenuItem.Icon>
 					</MenuItem>
 					<MenuItem
 						Click="CollapseAll"
 						Header="{StaticResource Edit.Category.Action.ContextMenu.Label.Collapse}"
-						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Collapse}"
-						>
+						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Collapse}">
 						<MenuItem.Icon>
 							<Image
 								Width="16"
 								Height="16"
-								Source="{StaticResource collapse}"
-								/>
+								Source="{StaticResource collapse}" />
 						</MenuItem.Icon>
 					</MenuItem>
 					<Separator />
@@ -192,55 +176,47 @@
 						Click="AddTask"
 						DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
 						Header="{StaticResource Edit.Category.Action.ContextMenu.Label.AddTask}"
-						ToolTip="{StaticResource Edit.Category.Action.Tooltip.AddTask}"
-						>
+						ToolTip="{StaticResource Edit.Category.Action.Tooltip.AddTask}">
 						<MenuItem.Icon>
 							<Image
 								Width="16"
 								Height="16"
-								Source="{StaticResource addtask}"
-								/>
+								Source="{StaticResource addtask}" />
 						</MenuItem.Icon>
 					</MenuItem>
 					<MenuItem
 						Click="AddSubTask"
 						DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
 						Header="{StaticResource Edit.Category.Action.ContextMenu.Label.AddSubTask}"
-						ToolTip="{StaticResource Edit.Category.Action.Tooltip.AddSubTask}"
-						>
+						ToolTip="{StaticResource Edit.Category.Action.Tooltip.AddSubTask}">
 						<MenuItem.Icon>
 							<Image
 								Width="16"
 								Height="16"
-								Source="{StaticResource addsubtask}"
-								/>
+								Source="{StaticResource addsubtask}" />
 						</MenuItem.Icon>
 					</MenuItem>
 					<MenuItem
 						Click="ButtonDelete"
 						Header="{StaticResource Edit.Category.Action.ContextMenu.Label.DeleteTask}"
-						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Delete}"
-						>
+						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Delete}">
 						<MenuItem.Icon>
 							<Image
 								Width="16"
 								Height="16"
-								Source="{StaticResource deletetask}"
-								/>
+								Source="{StaticResource deletetask}" />
 						</MenuItem.Icon>
 					</MenuItem>
 					<Separator />
 					<MenuItem
 						Click="ButtonSave"
 						Header="{StaticResource Edit.Category.Action.ContextMenu.Label.Save}"
-						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Save}"
-						>
+						ToolTip="{StaticResource Edit.Category.Action.Tooltip.Save}">
 						<MenuItem.Icon>
 							<Image
 								Width="16"
 								Height="16"
-								Source="{StaticResource save}"
-								/>
+								Source="{StaticResource save}" />
 						</MenuItem.Icon>
 					</MenuItem>
 				</ContextMenu>
@@ -263,16 +239,14 @@
 			Height="30"
 			Margin="10,0,10,0"
 			VerticalAlignment="Center"
-			Background="LightGray"
-			>
+			Background="LightGray">
 			<Grid>
 				<StackPanel Orientation="Horizontal">
 					<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
 					<TextBlock
 						x:Name="dispStatusLine"
 						Style="{DynamicResource Status.Description}"
-						Text="{DynamicResource Import.Statusline.Description}"
-						/>
+						Text="{DynamicResource Import.Statusline.Description}" />
 				</StackPanel>
 			</Grid>
 		</DockPanel>
