Enhance data handling and UI validation features
- Updated `App.xaml` to include a new XML namespace for converters.
- Refactored `DBCommands.cs` to use `DatabaseValueConverter` for safer data type conversions.
- Modified `SupplyOrderModel` to inherit from `ObservableObject` for property change notifications.
- Updated project file to reflect new assembly and file versions.
- Added tooltips for required fields in `Language.xaml`.
- Introduced `ValidatedTextBox` style in `TextBox.xaml` for visual validation feedback.
- Cleaned up commented-out code in `ProductManagement.xaml.cs` and `SupplierManagement.xaml.cs`.
- Enhanced `StorageManagement.xaml.cs` to store original property values correctly.
- Improved `StorageOrder.xaml` with new converters and layout updates for better user experience.
- Refactored `SupplyOrderViewModel` to utilize CommunityToolkit.Mvvm for command handling and state management.
- Added `DateOnlyToDateTimeConverter` and `DatabaseValueConverter` for improved data handling.
- Introduced `InputValidationRule` for input field validation.

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -675,11 +675,14 @@
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrder.Tooltip">Selecteer eventueel een bestaande bestelling</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderCosts.Text">Ordergrootte</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderNumber.Text">Bestelnummer</system:String>
+	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderNumber.Tooltip.Text">Het bestelnummer is een verplicht veld</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderDate.Text">Besteldatum</system:String>
+	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderDate.Tooltip.Text">De besteldatum is een verplicht veld</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderSendCosts.Text">Verzendkosten</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderOrderCosts.Text">Orderkosten</system:String>
 	<system:String x:Key="Edit.Inventory.Orders.SupplierOrderTotalCosts.Text">Totaal</system:String>
-
+	<system:String x:Key="Edit.Inventory.Orders.Supplier.Toolbar.Clear.Tooltip">Reset de bestelling</system:String>
+	<system:String x:Key="Edit.Inventory.Orders.Supplier.Toolbar.Save.Tooltip">Sla de bestelling op en werk, indien nodig, de artikelen per leverancier bij</system:String>
 	<!--#endregion-->
 
 	<!--#region Order products-->
