--- a/Modelbouwer/Resources/Styles/TextBox.xaml
+++ b/Modelbouwer/Resources/Styles/TextBox.xaml
@@ -26,5 +26,30 @@
 		</Style.Triggers>
 	</Style>
 
+	<Style
+		x:Key="ValidatedTextBox"
+		BasedOn="{StaticResource DefaultTextBox}"
+		TargetType="TextBox"
+		>
+		<Style.Triggers>
+			<Trigger Property="Text" Value="">
+				<Setter Property="BorderBrush" Value="Red" />
+				<Setter Property="BorderThickness" Value="2" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style
+		x:Key="ValidatedDatePicker"
+		BasedOn="{StaticResource DefaultDataPicker}"
+		TargetType="DatePicker"
+		>
+		<Style.Triggers>
+			<Trigger Property="Text" Value="">
+				<Setter Property="BorderBrush" Value="Red" />
+				<Setter Property="BorderThickness" Value="2" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
 
 </ResourceDictionary>
