Refactor supplier management and UI updates
- Updated `DBCommands` to determine default supplier using a boolean.
- Modified `ProductSupplierModel` to inherit from `ObservableObject` and changed `ProductSupplierDefaultSupplier` to a nullable boolean.
- Incremented assembly and file version numbers in `Modelbouwer.csproj`.
- Added new string resources in `Language.xaml` for unsaved changes and export titles.
- Introduced `NotSafedWarning` style in `TextBox.xaml` for visual warnings.
- Enhanced `ProductManagement.xaml` with a new `TextBox` for unsaved changes and improved data binding for `ProductSupplierDefaultSupplier`.
- Updated `ProductManagement.xaml.cs` to manage UI state with `_isUpdatingFields` and track changes with `FieldChanged`.
- Modified `CombinedProductViewModel` to inherit from `ObservableObject` and added `SelectedProduct` property.
- Enhanced `ProductSupplierViewModel` with new properties and methods for better supplier data management.
- Added `BooleanToStringConverter` for converting boolean values to strings in data binding.

--- a/Modelbouwer/Resources/Styles/TextBox.xaml
+++ b/Modelbouwer/Resources/Styles/TextBox.xaml
@@ -52,4 +52,19 @@
 		</Style.Triggers>
 	</Style>
 
+	<Style x:Key="NotSafedWarning" TargetType="TextBox">
+		<Setter Property="Background" Value="Red" />
+		<Setter Property="FontWeight" Value="Bold" />
+		<Setter Property="Foreground" Value="Yellow" />
+		<Setter Property="Height" Value="25" />
+		<Setter Property="HorizontalAlignment" Value="Center" />
+		<Setter Property="Margin" Value="0,0,0,7" />
+		<Setter Property="Padding" Value="15,0" />
+		<Setter Property="VerticalAlignment" Value="Top" />
+		<Setter Property="VerticalContentAlignment" Value="Center" />
+		<Setter Property="Width" Value="AUTO" />
+	</Style>
+
+
+
 </ResourceDictionary>
