--- a/Modelbouwer/View/ProductManagement.xaml
+++ b/Modelbouwer/View/ProductManagement.xaml
@@ -18,6 +18,7 @@
 
 	<Page.Resources>
 		<converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+		<converter:BooleanToStringConverter x:Key="BooleanToStringConverter" />
 		<converter:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
 		<converter:IntToBoolConverter x:Key="IntToBoolConverter" />
 		<converter:IndentToPaddingConverter x:Key="IndentToBoolConverter" />
@@ -631,16 +632,7 @@
 
 							<TextBox
 								Grid.Row="3"
-								Width="AUTO"
-								Height="25"
-								Margin="0,10"
-								Padding="15,0"
-								HorizontalAlignment="Center"
-								VerticalAlignment="Top"
-								VerticalContentAlignment="Center"
-								Background="Red"
-								FontWeight="Bold"
-								Foreground="Yellow"
+								Style="{DynamicResource NotSafedWarning}"
 								Text="{StaticResource Edit.Product.Tab.NewProduct.Warning}"
 								Visibility="{Binding ProductViewModel.IsAddingNew, Converter={StaticResource BooleanToVisibilityConverter}}"
 								/>
@@ -798,6 +790,7 @@
 												x:Name="btnSaveProductSupplier"
 												Click="SupplierToolbarButtonSave"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Action.Tooltip.Save}"
+												Visibility="{Binding ProductSupplierViewModel.HasSuppliers, Converter={StaticResource BooleanToVisibilityConverter}}"
 												>
 												<Image IsEnabled="False" Style="{DynamicResource ToolBarSaveIcon}" />
 											</Button>
@@ -807,11 +800,23 @@
 												VerticalContentAlignment="Center"
 												Click="SupplierToolbarButtonDelete"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Action.Tooltip.Delete}"
+												Visibility="{Binding ProductSupplierViewModel.HasSuppliers, Converter={StaticResource BooleanToVisibilityConverter}}"
 												>
 												<Image IsEnabled="False" Style="{DynamicResource ToolBarDeleteIcon}" />
 											</Button>
 										</ToolBar>
 									</ToolBarTray>
+
+									<TextBox
+										x:Name="SafeWarning"
+										Margin="10,6,0,6"
+										VerticalAlignment="Center"
+										HorizontalContentAlignment="Center"
+										VerticalContentAlignment="Center"
+										Style="{DynamicResource NotSafedWarning}"
+										Text="{StaticResource Edit.Product.ProductSupplier.UnSavedChanges}"
+										Visibility="{Binding ProductSupplierViewModel.HasUnsavedChanges, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
+										/>
 								</StackPanel>
 								<!--#endregion-->
 
@@ -868,7 +873,7 @@
 										<!--#region Default supplier-->
 										<DataGridTextColumn
 											Width="AUTO"
-											Binding="{Binding ProductSupplierDefaultSupplier, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+											Binding="{Binding ProductSupplierDefaultSupplier, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BooleanToStringConverter}}"
 											Header="{StaticResource Edit.Product.Tab.Supplier.DefaultSupplier.Header}"
 											>
 											<DataGridTextColumn.ElementStyle>
@@ -916,7 +921,7 @@
 
 							<!--#region Supplier information fields-->
 							<StackPanel Grid.Column="1" Margin="5">
-								<GroupBox>
+								<GroupBox x:Name="EditProductPerSupplier" IsEnabled="{Binding ProductSupplierViewModel.HasSuppliers}">
 									<GroupBox.Header>
 										<StackPanel Orientation="Horizontal">
 											<Image Source="{StaticResource supplier}" Style="{DynamicResource ImageHeaderGroup}" />
@@ -981,6 +986,7 @@
 											Style="{DynamicResource DefaultTextBox}"
 											Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.ProductNumberSupplier.Tag}"
 											Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierProductNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+											TextChanged="FieldChanged"
 											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.ProductNumberSupplier.Tooltip}"
 											/>
 										<!--#endregion-->
@@ -1000,6 +1006,7 @@
 											Style="{DynamicResource DefaultTextBox}"
 											Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.Description.Tag}"
 											Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierProductName}"
+											TextChanged="FieldChanged"
 											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Description.Tooltip}"
 											/>
 										<!--#endregion-->
@@ -1025,7 +1032,7 @@
 												IsReadOnly="True"
 												IsTabStop="False"
 												Style="{DynamicResource DefaultTextBox}"
-												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierCurrencySymbol}"
+												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierCurrencySymbol, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 												TextWrapping="Wrap"
 												/>
 
@@ -1039,6 +1046,7 @@
 												Style="{DynamicResource DefaultTextBox}"
 												Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.Price.Tag}"
 												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierPrice, StringFormat={}{0:N2}, ConverterCulture='nl-NL', UpdateSourceTrigger=PropertyChanged}"
+												TextChanged="FieldChanged"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Price.Tooltip}"
 												/>
 										</StackPanel>
@@ -1066,6 +1074,7 @@
 												Style="{DynamicResource DefaultTextBox}"
 												Tag="{StaticResource Edit.Product.Tab.Supplier.Group.General.Url.Tag}"
 												Text="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierURL, UpdateSourceTrigger=PropertyChanged}"
+												TextChanged="FieldChanged"
 												ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.Url.Tooltip}"
 												/>
 
@@ -1101,8 +1110,10 @@
 										<CheckBox
 											x:Name="SupplierDefault"
 											Grid.Row="11"
+											Checked="FieldChanged"
 											IsChecked="{Binding ProductSupplierViewModel.SelectedSupplier.ProductSupplierDefaultSupplier, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 											ToolTip="{StaticResource Edit.Product.Tab.Supplier.Group.General.DefaultSupplier.Tooltip}"
+											Unchecked="FieldChanged"
 											/>
 										<!--#endregion-->
 									</Grid>
